--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="card">
             <h2>Contact</h2>
             <p>Having trouble or have a suggestion? We'd love to hear from you.</p>
-            <a class="contact" href="mailto:jjnicolas@gmail.com">Email Support</a>
+            <a class="contact" href="mailto:uproar.mile.9r@icloud.com">Email Support</a>
         </div>
 
         <footer>
-            <p>&copy; 2025 Julien Nicolas. All rights reserved.</p>
+            <p>&copy; 2025 iDigits. All rights reserved.</p>
         </footer>
     </div>
 </body>
