--- a/privacy.html
+++ b/privacy.html
@@ -86,11 +86,11 @@
 
         <div class="card">
             <h2>Contact</h2>
-            <p>If you have any questions about this privacy policy, contact us at <a href="mailto:jjnicolas@gmail.com">jjnicolas@gmail.com</a>.</p>
+            <p>If you have any questions about this privacy policy, contact us at <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
         </div>
 
         <footer>
-            <p>&copy; 2025 Julien Nicolas. All rights reserved. <a href="index.html">Back to Support</a></p>
+            <p>&copy; 2025 iDigits. All rights reserved. <a href="index.html">Back to Support</a></p>
         </footer>
     </div>
 </body>
