--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="icon">🔢</div>
+        <img src="icon.png" alt="iDigits" width="80" height="80" style="border-radius: 18px; margin-bottom: 16px;">
         <h1>iDigits</h1>
         <p class="subtitle">Math Puzzle Challenge</p>
 
