--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="card">
             <h2>Contact</h2>
             <p>Having trouble or have a suggestion? We'd love to hear from you.</p>
-            <a class="contact" href="mailto:uproar.mile.9r@icloud.com">Email Support</a>
+            <a class="contact" href="mailto:idigits-support@tnfnet.org">Email Support</a>
         </div>
 
         <footer>
