Add multilingual support for en, fr, de, it, es
Restructure privacy and support pages into per-language files
under privacy/ and support/ directories, replacing the old
single-language privacy.html and support/index.html.

--- a/privacy/fr.html
+++ b/privacy/fr.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iDigits - Privacy Policy</title>
+    <title>iDigits - Politique de confidentialité</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -61,36 +61,36 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy</h1>
-        <p class="subtitle">iDigits — Last updated: February 14, 2026</p>
+        <h1>Politique de confidentialité</h1>
+        <p class="subtitle">iDigits — Dernière mise à jour : 14 février 2026</p>
 
         <div class="card">
-            <h2>No Data Collection</h2>
-            <p>iDigits does not collect, store, or transmit any personal data. The app runs entirely on your device with no network access.</p>
+            <h2>Aucune collecte de données</h2>
+            <p>iDigits ne collecte, ne stocke et ne transmet aucune donnée personnelle. L'application fonctionne entièrement sur votre appareil sans accès au réseau.</p>
         </div>
 
         <div class="card">
-            <h2>Local Storage Only</h2>
-            <p>Game progress, statistics, and preferences (such as difficulty and sound settings) are stored locally on your device using standard iOS mechanisms. This data never leaves your device.</p>
+            <h2>Stockage local uniquement</h2>
+            <p>La progression du jeu, les statistiques et les préférences (comme la difficulté et les paramètres sonores) sont stockées localement sur votre appareil via les mécanismes standard d'iOS. Ces données ne quittent jamais votre appareil.</p>
         </div>
 
         <div class="card">
-            <h2>No Third-Party Services</h2>
-            <p>iDigits does not include any third-party analytics, advertising, or tracking frameworks. There are no ads and no in-app purchases.</p>
+            <h2>Aucun service tiers</h2>
+            <p>iDigits n'intègre aucun outil d'analyse, de publicité ou de suivi tiers. Il n'y a ni publicité ni achat intégré.</p>
         </div>
 
         <div class="card">
-            <h2>No Account Required</h2>
-            <p>iDigits does not require you to create an account or sign in. There is no registration and no personal information is ever requested.</p>
+            <h2>Aucun compte requis</h2>
+            <p>iDigits ne nécessite ni création de compte ni connexion. Il n'y a aucune inscription et aucune information personnelle n'est demandée.</p>
         </div>
 
         <div class="card">
             <h2>Contact</h2>
-            <p>If you have any questions about this privacy policy, contact us at <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>Si vous avez des questions concernant cette politique de confidentialité, contactez-nous à <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
         </div>
 
         <footer>
-            <p>&copy; 2025 iDigits. All rights reserved. <a href="index.html">Back to Support</a></p>
+            <p>&copy; 2025 iDigits. Tous droits réservés. <a href="../support/fr.html">Retour au support</a></p>
         </footer>
     </div>
 </body>
