Fix contact email in privacy pages to use support address

--- a/privacy/de.html
+++ b/privacy/de.html
@@ -86,7 +86,7 @@
 
         <div class="card">
             <h2>Kontakt</h2>
-            <p>Wenn Sie Fragen zu dieser Datenschutzrichtlinie haben, kontaktieren Sie uns unter <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>Wenn Sie Fragen zu dieser Datenschutzrichtlinie haben, kontaktieren Sie uns unter <a href="mailto:idigits-support@tnfnet.org">idigits-support@tnfnet.org</a>.</p>
         </div>
 
         <footer>
