--- a/privacy/en.html
+++ b/privacy/en.html
@@ -86,7 +86,7 @@
 
         <div class="card">
             <h2>Contact</h2>
-            <p>If you have any questions about this privacy policy, contact us at <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>If you have any questions about this privacy policy, contact us at <a href="mailto:idigits-support@tnfnet.org">idigits-support@tnfnet.org</a>.</p>
         </div>
 
         <footer>
