--- a/privacy/es.html
+++ b/privacy/es.html
@@ -86,7 +86,7 @@
 
         <div class="card">
             <h2>Contacto</h2>
-            <p>Si tienes alguna pregunta sobre esta política de privacidad, contáctanos en <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>Si tienes alguna pregunta sobre esta política de privacidad, contáctanos en <a href="mailto:idigits-support@tnfnet.org">idigits-support@tnfnet.org</a>.</p>
         </div>
 
         <footer>
