--- a/privacy/fr.html
+++ b/privacy/fr.html
@@ -86,7 +86,7 @@
 
         <div class="card">
             <h2>Contact</h2>
-            <p>Si vous avez des questions concernant cette politique de confidentialité, contactez-nous à <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>Si vous avez des questions concernant cette politique de confidentialité, contactez-nous à <a href="mailto:idigits-support@tnfnet.org">idigits-support@tnfnet.org</a>.</p>
         </div>
 
         <footer>
