--- a/privacy/it.html
+++ b/privacy/it.html
@@ -86,7 +86,7 @@
 
         <div class="card">
             <h2>Contatti</h2>
-            <p>Per qualsiasi domanda su questa informativa sulla privacy, contattaci all'indirizzo <a href="mailto:uproar.mile.9r@icloud.com">uproar.mile.9r@icloud.com</a>.</p>
+            <p>Per qualsiasi domanda su questa informativa sulla privacy, contattaci all'indirizzo <a href="mailto:idigits-support@tnfnet.org">idigits-support@tnfnet.org</a>.</p>
         </div>
 
         <footer>
